enable connecting to local process via PID